test/classes/forwarding/forwarding-cycle.good
forwarding-cycle.chpl:13: In function 'main':
forwarding-cycle.chpl:5: error: forwarding cycle detected
forwarding-cycle.chpl:8: note: for the type B
